--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
   "dependencies": {
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-worklets": "^0.6.1",
+    "tailwindcss": "^3.4.18"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.6"
+  }
 }
