--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.13",
-    "expo-status-bar": "~3.0.8",
-    "nativewind": "^4.2.1",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "@react-navigation/native": "7.1.19",
+    "@react-navigation/native-stack": "7.6.1",
+    "expo": "54.0.21",
+    "expo-status-bar": "3.0.8",
+    "nativewind": "4.2.1",
+    "prettier-plugin-tailwindcss": "0.7.1",
     "react": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-worklets": "^0.6.1",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.18"
   },
   "private": true,
   "devDependencies": {
-    "babel-preset-expo": "^54.0.6"
+    "babel-preset-expo": "54.0.6"
   }
 }
