--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier-plugin-tailwindcss": "0.7.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "5.6.2",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.18"
   },
