--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/native-stack": "7.6.1",
     "expo": "54.0.21",
     "expo-status-bar": "3.0.8",
-    "nativewind": "4.2.1",
-    "prettier-plugin-tailwindcss": "0.7.1",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-paper": "^5.12.6",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "0.5.1",
