--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "7.1.19",
     "@react-navigation/native-stack": "7.6.1",
     "expo": "54.0.21",
+    "expo-sqlite": "^16.0.9",
     "expo-status-bar": "3.0.8",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
